[gd_scene load_steps=75 format=2]

[ext_resource path="res://battle/battle.gd" type="Script" id=1]
[ext_resource path="res://battle/art/Healt_empty.png" type="Texture" id=2]
[ext_resource path="res://battle/art/Magie_Empty.png" type="Texture" id=3]
[ext_resource path="res://battle/art/Healt_Full.png" type="Texture" id=4]
[ext_resource path="res://battle/art/Magie_Full.png" type="Texture" id=5]
[ext_resource path="res://battle/art/Platform_Grass_01.png" type="Texture" id=6]
[ext_resource path="res://battle/art/hud/Hud_Background.png" type="Texture" id=7]
[ext_resource path="res://battle/player/playerbattle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Action RPG Resources/font/alphbeta.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://battle/art/hud/Dark/Fight_Dark.png" type="Texture" id=10]
[ext_resource path="res://battle/art/hud/Dark/Magie_Dark.png" type="Texture" id=11]
[ext_resource path="res://battle/art/hud/Dark/Inventory_dark.png" type="Texture" id=12]
[ext_resource path="res://battle/art/hud/Dark/Run_Dark.png" type="Texture" id=13]
[ext_resource path="res://battle/art/hud/Colour/Fight_White.png" type="Texture" id=14]
[ext_resource path="res://battle/art/hud/Colour/Magie_Orange.png" type="Texture" id=15]
[ext_resource path="res://battle/art/hud/Colour/Run_Red.png" type="Texture" id=16]
[ext_resource path="res://battle/art/hud/Colour/Inventory_Brown.png" type="Texture" id=17]
[ext_resource path="res://battle/art/background_01.png" type="Texture" id=18]
[ext_resource path="res://battle/peak.gd" type="Script" id=19]
[ext_resource path="res://battle/art/sky.png" type="Texture" id=20]
[ext_resource path="res://battle/art/grass.png" type="Texture" id=21]
[ext_resource path="res://battle/art/plain.png" type="Texture" id=22]
[ext_resource path="res://battle/art/mountains.png" type="Texture" id=23]
[ext_resource path="res://battle/art/clouds.png" type="Texture" id=24]
[ext_resource path="res://battle/buttons.gd" type="Script" id=25]
[ext_resource path="res://battle/art/hud/Butten_03.png" type="Texture" id=26]
[ext_resource path="res://battle/art/hud/Butten_04.png" type="Texture" id=27]
[ext_resource path="res://battle/art/hud/Butten_02.png" type="Texture" id=28]
[ext_resource path="res://battle/art/hud/Butten_Banner.png" type="Texture" id=29]
[ext_resource path="res://battle/art/hud/Butten_01.png" type="Texture" id=30]
[ext_resource path="res://battle/art/hud/Butten_01_Unpressed.png" type="Texture" id=31]
[ext_resource path="res://battle/art/hud/Butten_03_Unpressed.png" type="Texture" id=32]
[ext_resource path="res://battle/art/hud/Butten_04_Unpressed.png" type="Texture" id=33]
[ext_resource path="res://battle/art/hud/Butten_02_Unpressed.png" type="Texture" id=34]
[ext_resource path="res://battle/art/hud/Butten_Banner_magi.png" type="Texture" id=35]
[ext_resource path="res://battle/art/hud/Inventory_Empty.png" type="Texture" id=36]
[ext_resource path="res://battle/inventory.gd" type="Script" id=37]
[ext_resource path="res://battle/art/hud/Inventory_Big_Slot.png" type="Texture" id=38]
[ext_resource path="res://battle/art/hud/Inventory_Tab_Butten_Up_Unpressed.png" type="Texture" id=39]
[ext_resource path="res://battle/art/hud/Inventory_Tab_Butten_Up_Hover.png" type="Texture" id=40]
[ext_resource path="res://battle/art/hud/Inventory_Tab_Butten_Down_Unpressed.png" type="Texture" id=41]
[ext_resource path="res://battle/art/hud/Inventory_Tab_Butten_Down_Hover.png" type="Texture" id=42]
[ext_resource path="res://battle/art/hud/Inventory_Tab_Indicator.png" type="Texture" id=43]
[ext_resource path="res://battle/art/hud/Inventory_Tab_Butten_Back_UnpressedUnpressed.png" type="Texture" id=44]
[ext_resource path="res://battle/art/hud/Inventory_Tab_Butten_Back_Hover.png" type="Texture" id=45]
[ext_resource path="res://battle/exit.gd" type="Script" id=46]
[ext_resource path="res://transitions/battletransition.gd" type="Script" id=47]
[ext_resource path="res://newart/transition noise/download.jpeg" type="Texture" id=48]
[ext_resource path="res://battle/art/hud/Hud_Blue_Banner.png" type="Texture" id=49]
[ext_resource path="res://battle/Hud.gd" type="Script" id=50]

[sub_resource type="Animation" id=23]
resource_name = "load"
tracks/0/type = "value"
tracks/0/path = NodePath("enemycontrol/enemyplatform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 220, 68 ), Vector2( 67, 68 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("playercontrol/playerplatform:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -86, 68 ), Vector2( 67, 68 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D/Hud:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 125 ), Vector2( 0, 66 ) ]
}

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 19, 44 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 19, 44 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 19, 44 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 19, 44 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 19, 44 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 19, 44 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 19, 44 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 19, 44 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 30 )
region_rect = Rect2( 0, 0, 55, 17 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 31 )
region_rect = Rect2( 0, 0, 55, 17 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 55, 18 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 34 )
region_rect = Rect2( 0, 0, 55, 18 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 54, 18 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 32 )
region_rect = Rect2( 0, 0, 54, 18 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 27 )
region_rect = Rect2( 0, 0, 52, 18 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 33 )
region_rect = Rect2( 0, 0, 52, 18 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="DynamicFont" id=24]
size = 6
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=18]
size = 6
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 9 )

[sub_resource type="Shader" id=19]
code = "shader_type canvas_item;

uniform sampler2D dissolve_pattern;
uniform float dissolve_state: hint_range(0,1.1) = 0;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	float pattern_val = texture(dissolve_pattern, UV).r;
	COLOR.a *= step(dissolve_state, pattern_val);
}"

[sub_resource type="ShaderMaterial" id=20]
shader = SubResource( 19 )
shader_param/dissolve_state = 0.0
shader_param/dissolve_pattern = ExtResource( 48 )

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/dissolve_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "transition"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/dissolve_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.1 ]
}

[node name="battle" type="Node2D"]
script = ExtResource( 1 )

[node name="start" type="AnimationPlayer" parent="."]
anims/load = SubResource( 23 )

[node name="starttimer" type="Timer" parent="."]
wait_time = 2.2
one_shot = true
autostart = true

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -68 )
texture = ExtResource( 18 )

[node name="enemycontrol" type="Control" parent="."]
margin_left = 10.0
margin_top = -67.0
margin_right = 50.0
margin_bottom = -27.0

[node name="enemyplatform" type="Sprite" parent="enemycontrol"]
position = Vector2( 220, 68 )
texture = ExtResource( 6 )

[node name="enemyhealth" type="TextureProgress" parent="enemycontrol/enemyplatform"]
margin_left = -47.0
margin_top = 12.0
margin_right = 49.0
margin_bottom = 52.0
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="enemymagi" type="TextureProgress" parent="enemycontrol/enemyplatform"]
margin_left = -50.0
margin_top = -48.0
margin_right = 51.0
margin_bottom = 48.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 5 )

[node name="playercontrol" type="Control" parent="."]
margin_left = -154.0
margin_top = -67.0
margin_right = -114.0
margin_bottom = -27.0

[node name="playerplatform" type="Sprite" parent="playercontrol"]
position = Vector2( -86, 68 )
texture = ExtResource( 6 )

[node name="playerhealth" type="TextureProgress" parent="playercontrol/playerplatform"]
margin_left = -47.0
margin_top = 12.0
margin_right = 49.0
margin_bottom = 52.0
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="playermagi" type="TextureProgress" parent="playercontrol/playerplatform"]
margin_left = -50.0
margin_top = -48.0
margin_right = 51.0
margin_bottom = 48.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 5 )

[node name="player" parent="playercontrol/playerplatform" instance=ExtResource( 8 )]
position = Vector2( -1, -4 )
scale = Vector2( 1.5, 1.5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1, 0 )
current = true
script = ExtResource( 19 )

[node name="Hud" type="Sprite" parent="Camera2D"]
position = Vector2( 0, 125 )
texture = ExtResource( 7 )
script = ExtResource( 50 )

[node name="buttons" type="Control" parent="Camera2D/Hud"]
margin_left = 1.0
margin_top = -65.0
margin_right = 41.0
margin_bottom = -25.0
script = ExtResource( 25 )

[node name="attack" type="Button" parent="Camera2D/Hud/buttons" groups=["Button"]]
margin_left = 121.0
margin_top = 43.0
margin_right = 140.0
margin_bottom = 87.0
hint_tooltip = "attack"
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0

[node name="magi" type="Button" parent="Camera2D/Hud/buttons" groups=["Button"]]
margin_left = 89.0
margin_top = 43.0
margin_right = 108.0
margin_bottom = 87.0
focus_mode = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0

[node name="inventory" type="Button" parent="Camera2D/Hud/buttons" groups=["Button"]]
margin_left = 54.0
margin_top = 43.0
margin_right = 73.0
margin_bottom = 87.0
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0

[node name="flee" type="Button" parent="Camera2D/Hud/buttons" groups=["Button"]]
margin_left = 18.0
margin_top = 43.0
margin_right = 37.0
margin_bottom = 87.0
focus_mode = 0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0

[node name="attackbuttons" type="Control" parent="Camera2D/Hud"]
visible = false
margin_left = 1.0
margin_top = -66.0
margin_right = 41.0
margin_bottom = -26.0

[node name="ButtenBanner" type="Sprite" parent="Camera2D/Hud/attackbuttons"]
position = Vector2( 77, 64 )
texture = ExtResource( 29 )

[node name="attack1" type="Button" parent="Camera2D/Hud/attackbuttons" groups=["Button"]]
margin_left = 22.0
margin_top = 48.0
margin_right = 77.0
margin_bottom = 65.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 14 )

[node name="Attack1Lbl" type="Label" parent="Camera2D/Hud/attackbuttons/attack1"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="attack2" type="Button" parent="Camera2D/Hud/attackbuttons" groups=["Button"]]
margin_left = 21.0
margin_top = 65.0
margin_right = 75.0
margin_bottom = 82.0
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 15 )

[node name="Attack2Lbl" type="Label" parent="Camera2D/Hud/attackbuttons/attack2"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="attack3" type="Button" parent="Camera2D/Hud/attackbuttons" groups=["Button"]]
margin_left = 80.0
margin_top = 47.0
margin_right = 133.0
margin_bottom = 66.0
focus_mode = 0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 16 )

[node name="Attack3Lbl" type="Label" parent="Camera2D/Hud/attackbuttons/attack3"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="attack4" type="Button" parent="Camera2D/Hud/attackbuttons" groups=["Button"]]
margin_left = 81.0
margin_top = 64.0
margin_right = 132.0
margin_bottom = 84.0
focus_mode = 0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 17 )

[node name="Attack4Lbl" type="Label" parent="Camera2D/Hud/attackbuttons/attack4"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="exit" type="TextureButton" parent="Camera2D/Hud/attackbuttons"]
margin_left = 142.0
margin_top = 71.0
margin_right = 158.0
margin_bottom = 87.0
texture_normal = ExtResource( 44 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 45 )
texture_disabled = ExtResource( 45 )
script = ExtResource( 46 )

[node name="magibuttons" type="Control" parent="Camera2D/Hud"]
visible = false
margin_left = 1.0
margin_top = -65.0
margin_right = 41.0
margin_bottom = -25.0

[node name="Sprite" type="Sprite" parent="Camera2D/Hud/magibuttons"]
position = Vector2( 77, 64 )
texture = ExtResource( 35 )

[node name="magi1" type="TextureButton" parent="Camera2D/Hud/magibuttons" groups=["Button"]]
margin_left = 21.0
margin_top = 46.0
margin_right = 75.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( -54, 10 )
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 32 )

[node name="Magi1Lbl" type="Label" parent="Camera2D/Hud/magibuttons/magi1"]
margin_right = 54.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 24 )
align = 1
valign = 1

[node name="magi2" type="TextureButton" parent="Camera2D/Hud/magibuttons" groups=["Button"]]
margin_left = 21.0
margin_top = 64.0
margin_right = 75.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( -54, 10 )
texture_normal = ExtResource( 31 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 30 )
texture_disabled = ExtResource( 31 )

[node name="Magi2Lbl" type="Label" parent="Camera2D/Hud/magibuttons/magi2"]
margin_top = -1.0
margin_right = 54.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 24 )
align = 1
valign = 1

[node name="magi3" type="TextureButton" parent="Camera2D/Hud/magibuttons" groups=["Button"]]
margin_left = 78.0
margin_top = 46.0
margin_right = 132.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( -54, 10 )
texture_normal = ExtResource( 33 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 27 )
texture_disabled = ExtResource( 33 )

[node name="Magi3Lbl" type="Label" parent="Camera2D/Hud/magibuttons/magi3"]
margin_right = 54.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 24 )
align = 1
valign = 1

[node name="magi4" type="TextureButton" parent="Camera2D/Hud/magibuttons" groups=["Button"]]
margin_left = 76.0
margin_top = 64.0
margin_right = 131.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( -54, 10 )
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 28 )
texture_disabled = ExtResource( 34 )

[node name="Magi4Lbl" type="Label" parent="Camera2D/Hud/magibuttons/magi4"]
margin_top = -1.0
margin_right = 54.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 24 )
align = 1
valign = 1

[node name="exit" type="TextureButton" parent="Camera2D/Hud/magibuttons"]
margin_left = 142.0
margin_top = 71.0
margin_right = 158.0
margin_bottom = 87.0
texture_normal = ExtResource( 44 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 45 )
texture_disabled = ExtResource( 45 )
script = ExtResource( 46 )

[node name="inventory" type="Control" parent="Camera2D/Hud"]
visible = false
margin_left = 1.0
margin_top = -59.0
margin_right = 41.0
margin_bottom = -19.0
script = ExtResource( 37 )

[node name="InventoryEmpty" type="Sprite" parent="Camera2D/Hud/inventory"]
position = Vector2( 74.5, 60 )
scale = Vector2( 1.08264, 1 )
texture = ExtResource( 36 )

[node name="N" type="NinePatchRect" parent="Camera2D/Hud/inventory"]
margin_left = 8.0
margin_top = 43.0
margin_right = 140.0
margin_bottom = 77.0

[node name="items" type="MarginContainer" parent="Camera2D/Hud/inventory/N"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 33.0
margin_top = 1.0
margin_right = -13.0
margin_bottom = -1.0

[node name="Grid" type="GridContainer" parent="Camera2D/Hud/inventory/N/items"]
margin_right = 86.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 6

[node name="Info" type="MarginContainer" parent="Camera2D/Hud/inventory/N"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -105.0
margin_bottom = -1.0

[node name="InventoryBigSlot" type="Sprite" parent="Camera2D/Hud/inventory/N"]
position = Vector2( 16, 17 )
texture = ExtResource( 38 )

[node name="up" type="TextureButton" parent="Camera2D/Hud/inventory/N"]
margin_left = 118.0
margin_top = 1.0
margin_right = 131.0
margin_bottom = 13.0
texture_normal = ExtResource( 39 )
texture_pressed = ExtResource( 40 )
texture_hover = ExtResource( 40 )
texture_disabled = ExtResource( 40 )

[node name="InventoryTabIndicator" type="Sprite" parent="Camera2D/Hud/inventory/N"]
position = Vector2( 124.5, 17 )
scale = Vector2( 1.18182, 1 )
texture = ExtResource( 43 )

[node name="Label" type="Label" parent="Camera2D/Hud/inventory/N"]
margin_left = 118.0
margin_top = 13.0
margin_right = 131.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 18 )
text = "1"
align = 1
valign = 1

[node name="down" type="TextureButton" parent="Camera2D/Hud/inventory/N"]
margin_left = 118.0
margin_top = 21.0
margin_right = 131.0
margin_bottom = 33.0
texture_normal = ExtResource( 41 )
texture_pressed = ExtResource( 42 )
texture_hover = ExtResource( 42 )
texture_disabled = ExtResource( 42 )

[node name="exit" type="TextureButton" parent="Camera2D/Hud/inventory"]
margin_left = 142.0
margin_top = 65.0
margin_right = 158.0
margin_bottom = 81.0
texture_normal = ExtResource( 44 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 45 )
texture_disabled = ExtResource( 45 )
script = ExtResource( 46 )

[node name="HudBlueBanner" type="Sprite" parent="Camera2D/Hud"]
position = Vector2( -77, -1 )
texture = ExtResource( 49 )

[node name="battletext" type="Label" parent="Camera2D/Hud/HudBlueBanner"]
margin_left = -70.0
margin_top = -8.0
margin_right = 63.0
margin_bottom = 12.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
valign = 1
autowrap = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
layer = 100
follow_viewport_enable = true

[node name="transition" type="Sprite" parent="Camera2D/CanvasLayer"]
material = SubResource( 20 )
position = Vector2( -1, 0 )
scale = Vector2( 0.177, 0.177 )
script = ExtResource( 47 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/CanvasLayer/transition"]
anims/RESET = SubResource( 22 )
anims/transition = SubResource( 21 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -19 )
scale = Vector2( 1.35938, 2.08667 )
texture = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Clouds" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 0, -100 )
texture = ExtResource( 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mountains" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( -1, -37 )
texture = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Plain" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( -1, -31 )
texture = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
__meta__ = {
"_edit_lock_": true
}

[node name="Grass" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 5, 64 )
texture = ExtResource( 21 )
__meta__ = {
"_edit_lock_": true
}

[node name="TurnTimer" type="Timer" parent="."]

[connection signal="timeout" from="starttimer" to="." method="_on_starttimer_timeout"]
[connection signal="pressed" from="Camera2D/Hud/buttons/attack" to="Camera2D/Hud/buttons" method="_on_attack_pressed"]
[connection signal="pressed" from="Camera2D/Hud/buttons/magi" to="Camera2D/Hud/buttons" method="_on_magi_pressed"]
[connection signal="pressed" from="Camera2D/Hud/buttons/inventory" to="Camera2D/Hud/buttons" method="_on_inventory_pressed"]
[connection signal="pressed" from="Camera2D/Hud/buttons/flee" to="Camera2D/Hud/buttons" method="_on_flee_pressed"]
[connection signal="pressed" from="Camera2D/Hud/attackbuttons/exit" to="Camera2D/Hud/attackbuttons/exit" method="_on_exit_pressed"]
[connection signal="mouse_entered" from="Camera2D/Hud/magibuttons/magi1" to="Camera2D/Hud" method="_on_magi1_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Hud/magibuttons/magi1" to="Camera2D/Hud" method="_on_magi1_mouse_exited"]
[connection signal="pressed" from="Camera2D/Hud/magibuttons/magi1" to="." method="_on_magi1_pressed" binds= [ "Camera2D/Hud/magibuttons/magi1" ]]
[connection signal="pressed" from="Camera2D/Hud/magibuttons/exit" to="Camera2D/Hud/magibuttons/exit" method="_on_exit_pressed"]
[connection signal="pressed" from="Camera2D/Hud/inventory/exit" to="Camera2D/Hud/inventory/exit" method="_on_exit_pressed"]
